.offset bug fixed on tablet mode

--- a/less/metro-responsive.less
+++ b/less/metro-responsive.less
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5, h6, p  {
 
             & > .cell, & > .cell[class*=colspan] {
                 width: 48.936175% ;
-                margin-bottom: 10px;
+                margin: 0 0 10px 0;
 
                 &:nth-child(odd) {
                     margin-left: 0;
@@ -127,7 +127,7 @@ h1, h2, h3, h4, h5, h6, p  {
 
                 & > .cell, & > .cell[class*=colspan] {
                     width: 50% ;
-                    margin-bottom: 10px ;
+                    margin: 0 0 10px 0 ;
 
                     &:nth-child(odd) {
                         margin-left: 0;
